# deepiri-memorymesh

./: .gitignore  README.md  pyproject.toml
.github/codeql/: README.md
.github/workflows/: ci.yml
deepiri_memorymesh/: __init__.py  cli.py  compression.py  config.py  device_paths.py  embeddings.py  export.py  integrations.py  models.py  packaging.py  retrieval.py  scanner.py  service_api.py  storage.py  sync_service.py  transfer_delivery.py  transfer_formats.py  tui.py
deepiri_memorymesh/providers/: __init__.py  aider.py  base.py  claude.py  continue_dev.py  cursor.py  cursor_sqlite.py  gemini.py  opencode.py
docs/: INTEGRATIONS.md  PROVIDERS.md  STORAGE_PATHS.md  U_DATA_PACKAGING.md
memorymesh/: __init__.py
scripts/: install.sh
tests/: test_export.py  test_transfer.py
