[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepiri-memorymesh"
version = "0.1.0"
description = "Cross-provider memory sync and retrieval for AI coding tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=3.0.1",
]

[project.scripts]
memorymesh = "deepiri_memorymesh.cli:app"

[tool.setuptools]
packages = ["deepiri_memorymesh", "deepiri_memorymesh.providers"]
