[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorymesh"
version = "0.1.0"
description = "Drop-in memory layer for ANY AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
embeddings = [
   "sentence-transformers>=3.0.1",
]

[project.scripts]
memorymesh = "deepiri_memorymesh.cli:app"

[tool.setuptools]
packages = ["deepiri_memorymesh", "memorymesh", "deepiri_memorymesh.providers"]